--- a/resurse.html
+++ b/resurse.html
@@ -22,7 +22,7 @@
     <main>
         <section class="section">
             <div class="container">
-                <h1 class="page-title">Resurse de învățare - Pagină în construcție!</h1>
+                <h1 class="page-title">Resurse de învățare</h1>
                 
                 <div class="course-intro">
                     <p>
@@ -104,10 +104,11 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://drive.google.com/drive/folders/YOUR-FOLDER-ID" target="_blank">
-                                    Înregistrări de curs (Google Drive)
+                                <a href="https://www.youtube.com/playlist?list=PLAxJ4-o7ZoPfb18kNe2luWX9xKg1233i9" target="_blank">
+                                    Playlist - Programare în GIS (YouTube)
                                 </a>
                             </li>
+                           
                         </ul>
                     </div>
 
