--- a/informatica-turism.html
+++ b/informatica-turism.html
@@ -319,7 +319,7 @@
                 <div class="info-box">
                     <h3>ℹ️ Informații despre seminar</h3>
                     <p><strong>Ore pe săptămână:</strong> 2 ore seminar + 2 ore curs (profesor titular lect. dr. Lucian Roșu)</p>
-                    <p><strong>Evaluare:</strong> 30% portofoliu de lucru în clasă, 30% temele pentru acasă, 40% test final. Formularele de trimitere a lucrărilor realizate în clasă sunt deschide timp de 2 săptămâni de la data seminarului. Formularele de trimitere a temelor pentru acasă sunt deschise până pe 29 mai inclusiv.</p>
+                    <p><strong>Evaluare:</strong> 30% portofoliu de lucru în clasă, 30% temele pentru acasă, 40% test final. Formularele de trimitere a lucrărilor realizate în clasă sunt deschise timp de 2 săptămâni de la data seminarului. Formularele de trimitere a temelor pentru acasă sunt deschise până pe 29 mai inclusiv.</p>
                     <p><strong>Prezență:</strong> Se admit trei absențe pe parcursul semestrului</p>
                     <p>Pentru întrebări sau probleme tehnice, contacați manufosalau99@gmail.com.</p>
                 </div>
