--- a/informatica-turism.html
+++ b/informatica-turism.html
@@ -97,14 +97,13 @@
                         5: { url: "https://docs.google.com/document/d/19wqRA018em6idU40ykkrD1mD8fTrWp35MgyADjqogLM/edit?usp=sharing", activ: new Date(2026, 2, 14, 20, 0, 0) },
                         6: { url: "https://docs.google.com/document/d/1_U0Qg7hFC54bWdv0jxQKolJsOBXx2jQUl478dXfg9kM/edit?usp=sharing", activ: new Date(2026, 2, 21, 20, 0, 0) },
                         7: { url: "https://docs.google.com/document/d/17_rosQDn9Njmt5KCrRcyzNxWLt4LxsG0vtImtqfLVKY/edit?usp=sharing", activ: new Date(2026, 2, 28, 20, 0, 0) },
-                        8: { url: "https://docs.google.com/document/d/1zF-Ib2N8_rwwMSBBKLkTGaEt7qd2maCH7fhQeqHi4BE/edit?usp=drive_link", activ: new Date(2026, 3, 5, 20, 0, 0) },
-                        9: { url: "https://docs.google.com/document/d/1Ff6eXB_3nSbJXMaiSsRsl6sFOxebEy2FaHkOvz-XIEw/edit?usp=drive_link", activ: new Date(2026, 3, 12, 20, 0, 0) },
-                        10: { url: "https://docs.google.com/document/d/17sfeu7GMzfz7w-vV8PH8HMaOVK85LXMOX7bU_eAbNpA/edit?usp=drive_link", activ: new Date(2026, 3, 19, 20, 0, 0) },
-                        11: { url: "https://docs.google.com/document/d/1aUy8PZZfWU5bVjwbDtYR_bu439VS0pzLIgoV5PX-byg/edit?usp=drive_link", activ: new Date(2026, 3, 26, 20, 0, 0) },
-                        12: { url: "https://drive.google.com/file/d/LINK-SAPT-12/view", activ: new Date(2026, 4, 3, 20, 0, 0) },
+                        8: { url: "https://docs.google.com/document/d/1zF-Ib2N8_rwwMSBBKLkTGaEt7qd2maCH7fhQeqHi4BE/edit?usp=sharing", activ: new Date(2026, 3, 5, 20, 0, 0) },
+                        9: { url: "https://docs.google.com/document/d/1Ff6eXB_3nSbJXMaiSsRsl6sFOxebEy2FaHkOvz-XIEw/edit?usp=sharing", activ: new Date(2026, 3, 12, 20, 0, 0) },
+                        10: { url: "https://docs.google.com/document/d/17sfeu7GMzfz7w-vV8PH8HMaOVK85LXMOX7bU_eAbNpA/edit?usp=sharing", activ: new Date(2026, 3, 19, 20, 0, 0) },
+                        11: { url: "https://docs.google.com/document/d/1aUy8PZZfWU5bVjwbDtYR_bu439VS0pzLIgoV5PX-byg/edit?usp=sharing", activ: new Date(2026, 3, 26, 20, 0, 0) },
+                        // 12: { url: "https://drive.google.com/file/d/LINK-SAPT-12/view", activ: new Date(2026, 4, 3, 20, 0, 0) },
                         // 13: { url: "https://drive.google.com/file/d/LINK-SAPT-13/view", activ: new Date(YYYY-MM-DD-HH-MM-SS) },
-                        // Example for future weeks:
-                        //   { url: "https://drive.google.com/file/d/LINK-SAPT-XX/view", activ: new Date(YYYY-MM-DD-HH-MM-SS) }
+                
                     };
 
                     // Titlurile pentru fiecare săptămână
