--- a/resurse.html
+++ b/resurse.html
@@ -33,9 +33,10 @@
                 <div class="materials-grid">
                     <!-- Books & Bibliography -->
                     <div class="material-card">
-                        <h3>📚 Cărți și bibliografie</h3>
+                        <h3>📚 Materiale GIS</h3>
                         <ul class="material-list">
-                            <li>
+                            <p> Niciun material postat momentan.</p>
+                            <!--<li>
                                 <a href="materials/bibliografie-generala.pdf" target="_blank">
                                     Bibliografie generală - Geografie și Turism
                                 </a>
@@ -49,7 +50,7 @@
                                 <a href="materials/resurse-online.pdf" target="_blank">
                                     Resurse online gratuite
                                 </a>
-                            </li>
+                            </li>-->
                         </ul>
                     </div>
 
@@ -94,7 +95,7 @@
                         <h3>🎥 Tutoriale video</h3>
                         <ul class="material-list">
                             <li>
-                                <a href="https://www.youtube.com/playlist?list=YOUR-PLAYLIST" target="_blank">
+                                <a href="https://www.youtube.com/playlist?list=PLLxyyob7YmEENK-d7gotA6IoX7277rsQP" target="_blank">
                                     Playlist - Introducere în GIS (YouTube)
                                 </a>
                             </li>
@@ -150,7 +151,7 @@
                         <h3>🔬 Metode de cercetare</h3>
                         <ul class="material-list">
                             <li>
-                                <a href="https://docs.google.com/document/d/1aQCXGcQl1eYIsfF1BluguRrmgQUhcffC/edit?usp=drive_link&ouid=113452843484712670406&rtpof=true&sd=true" target="_blank">
+                                <a href="https://docs.google.com/document/d/1MGKbFn_fczuppxn68xIEDD-E3dlZLa9h/edit?usp=sharing&ouid=113452843484712670406&rtpof=true&sd=true" target="_blank">
                                     Template pentru lucrarea de licență/disertație
                                 </a>
                             </li>
